2012-05-02  Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-00-11
	* merge NewRB (new ResourceBroker) into trunk

2012-04-25  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-10
	* fixed resource resetting after emergency stop
	
2012-04-21  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-08
	* moved resource resetting to stopping
	
2012-04-17  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-07-01
	* changes to setEvtDiscard and writeErrorEventData (double discard)
	
2012-04-17  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-07
	* resources and shm buffer are reset on Enabling

2012-04-12  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-06
	* added ShmBuffer exception handling
	* added protection from late SM discards through I2O
	
2012-04-09  Srecko Morovic  <smorovic@cern.ch>

	* tag V01-00-05-01
	* back to nbFreeSlotsMax = nbResources() / 2

2012-04-02  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-03
	* fixed compilation on Mac OS

2012-03-28  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-02
	* fixed Rule 1 code violations

2012-03-26  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-01
	* SOAP response is now synchronous
	* send allocate when empty raw cells > 0

2012-03-16  Andrei Spataru  <aspataru@cern.ch>

	* tag V01-00-00
	* replaced FSM with boost::statechart

2011-04-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-07
	* include LUMISECTION in state chart
	
2011-04-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-06
	* fix stopping when all clients are dead

2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-05
	* yet small improvement to dqm diagnostic
	
2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-04
	* acceptDQMdiscard flag now counting 
	* moved flag for discard after sent for dqm cells
	* added timeout on send for dqm cells
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-03
	* split spurious dqm discard message and demote one cat to WARN
